@@ -19,7 +19,7 @@ Depends: R (>= 4.2.0)
 License: Artistic-2.0
 VignetteBuilder: knitr
 Imports: biocViews (>= 1.33.7), BiocManager, stringdist, graph, httr, tools,
-    codetools, methods, utils, knitr
+    codetools, methods, utils, knitr, callr
 Suggests: RUnit, BiocGenerics, Biobase, jsonlite, rmarkdown, downloader,
     devtools (>= 1.4.1), usethis, BiocStyle
 Enhances: codetoolsBioC
