@@ -1,6 +1,11 @@
 CHANGES IN VERSION 1.34
 -----------------------
 
+NEW FEATURES
+
+    o Use `callr` to run `BiocCheck` in a separate process, this avoids
+    interference with loaded packages (@vjcitn, #158)
+
 BUG FIXES AND MINOR IMPROVEMENTS
 
     o Updates to internal documentation of the `BiocCheck-class`
